--- a/src/themes/core/templates/partial/welcome.html
+++ b/src/themes/core/templates/partial/welcome.html
@@ -1,8 +1,6 @@
-<div id="family" class="hero h-96">
-  <div class="hero-content text-center">
-    <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Hello there 👋🏻</h1>
-      <p class="py-6">Welcome to our <strong>Family</strong> website.</p>
-    </div>
+<div class="bg-white px-6 py-24 sm:py-32 lg:px-8">
+  <div class="mx-auto max-w-2xl text-center">
+    <h2 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Hello there 👋🏻</h2>
+    <p class="mt-6 text-lg leading-8 text-gray-600">Welcome to our <strong>Family</strong> website.</p>
   </div>
 </div>
