--- a/src/themes/core/templates/base.html
+++ b/src/themes/core/templates/base.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}" data-theme="dark">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{ SITENAME }}</title>
-        <link rel="shortcut icon" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/icons/favicon.png">
-        <script src="https://cdn.tailwindcss.com"></script>
 
-        <meta name="twitter:card" content="summary" />
-        <meta property="og:url" content="{{ SITEURL }}" />
-        <meta property="og:title" content="{{ SITENAME }}" />
-        <meta property="og:description" content="Welcome to our Family website." />
-        <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/twitter_card.png" />
-    </head>
-    <body>
-        <main role="main">
-            <div class="container mx-auto">
-                {% block content %}
-                {% endblock %}
-            </div>
-        </main>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ SITENAME }}</title>
+    <link rel="shortcut icon" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/icons/favicon.png">
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="{{ SITEURL }}" />
+    <meta property="og:title" content="{{ SITENAME }}" />
+    <meta property="og:description" content="Welcome to our Family website." />
+    <meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/twitter_card.png" />
+</head>
+
+<body class="bg-white dark:bg-neutral-950">
+    <main role="main">
+        <div class="container mx-auto">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </main>
+</body>
+
 </html>
