--- a/src/themes/core/templates/partial/events.html
+++ b/src/themes/core/templates/partial/events.html
@@ -1,10 +1,10 @@
-<div class="bg-white pt-24 sm:pt-32">
+<div class="pt-24 sm:pt-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
 
-    <div class="bg-white px-6 py-24 sm:py-32 lg:px-8">
+    <div class="px-6 py-24 sm:py-32 lg:px-8">
       <div class="mx-auto max-w-2xl text-center">
-        <h2 class="text-4xl font-bold tracking-tight text-gray-900">Timeline</h2>
-        <p class="mt-6 text-lg leading-8 text-gray-600">Events important to us.</p>
+        <h2 class="text-4xl font-bold tracking-tight text-gray-900 dark:text-neutral-100">Timeline</h2>
+        <p class="mt-6 text-lg leading-8 text-gray-60 dark:text-neutral-500">Events important to us.</p>
       </div>
     </div>
 
@@ -13,26 +13,29 @@
       <li class="relative flex gap-x-4">
         {% if loop.last %}
         <div class="absolute left-0 top-0 flex w-6 justify-center">
-        {% else %}
-        <div class="absolute left-0 top-0 flex w-6 justify-center -bottom-6">
-        {% endif %}
-          <div class="w-px bg-gray-200"></div>
-        </div>
-        {% if event.important %}
-        <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
-          <div class="h-1.5 w-1.5 rounded-full bg-green-400 ring-1 ring-green-400"></div>
-        </div>
-        <p class="flex-auto font-medium py-0.5 text-xs leading-5">{{ event.title }}</p>
-        {% else %}
-        <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
-          <div class="h-1.5 w-1.5 rounded-full bg-gray-100 ring-1 ring-gray-300"></div>
-        </div>
-        <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500">{{ event.title }}</p>
-        {% endif %}        
-        <time class="flex-none py-0.5 text-xs leading-5 text-gray-500">{{ event.date }}</time>
+          {% else %}
+          <div class="absolute left-0 top-0 flex w-6 justify-center -bottom-6">
+            {% endif %}
+            <div class="w-px bg-gray-200 dark:bg-neutral-900"></div>
+          </div>
+          {% if event.important %}
+          <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white dark:bg-neutral-950">
+            <div class="h-1.5 w-1.5 rounded-full bg-green-400 ring-1 ring-green-400"></div>
+          </div>
+          <p class="flex-auto font-medium py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-300">{{ event.title
+            }}</p>
+          {% else %}
+          <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white dark:bg-neutral-950">
+            <div
+              class="h-1.5 w-1.5 rounded-full bg-gray-100 dark:bg-neutral-500 ring-1 ring-gray-300 dark:ring-neutral-500 dark:text-neutral-500">
+            </div>
+          </div>
+          <p class="flex-auto py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-500">{{ event.title }}</p>
+          {% endif %}
+          <time class="flex-none py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-500">{{ event.date }}</time>
       </li>
       {% endfor %}
     </ul>
-    
+
   </div>
 </div>
