--- a/src/themes/core/templates/base.html
+++ b/src/themes/core/templates/base.html
@@ -7,6 +7,7 @@
     <title>{{ SITENAME }}</title>
     <link rel="shortcut icon" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/icons/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/css/animations.css">
 
     <meta name="twitter:card" content="summary" />
     <meta property="og:url" content="{{ SITEURL }}" />
