--- a/src/themes/core/templates/partial/animals.html
+++ b/src/themes/core/templates/partial/animals.html
@@ -14,14 +14,13 @@
       <li>
         {% if animal.alive %}
         <span class="relative inline-block">
-          <img class="mx-auto h-24 w-24 rounded-full"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/animals/{{ animal.avatar }}" alt="{{ animal.name }}">
+          <img class="mx-auto h-24 w-24 rounded-full hover:scale-105 hover:rotate-[10deg] transition" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/animals/{{ animal.avatar }}" alt="{{ animal.name }}">
           <span
             class="absolute right-1 top-1 block h-4 w-4 rounded-full bg-green-400 ring-2 ring-white dark:ring-neutral-950"></span>
         </span>
 
         {% else %}
-        <img class="mx-auto h-24 w-24 rounded-full grayscale"
+        <img class="mx-auto h-24 w-24 rounded-full grayscale hover:scale-105 hover:rotate-[10deg] transition"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/animals/{{ animal.avatar }}" alt="{{ animal.name }}">
         {% endif %}
         <h3 class="mt-2 text-base leading-7 tracking-tight text-gray-900 dark:text-neutral-500">{{ animal.name }}</h3>
