--- a/src/themes/core/templates/partial/events.html
+++ b/src/themes/core/templates/partial/events.html
@@ -8,31 +8,23 @@
       </div>
     </div>
 
-    <ul role="list" class="space-y-6 max-w-2xl mx-auto">
+    <ul role="list" class="max-w-2xl mx-auto">
       {% for event in SITE_DATA.events %}
-      <li class="relative flex gap-x-4">
+      <li class="relative flex gap-x-4 hover:scale-105 transition">
         {% if loop.last %}
         <div class="absolute left-0 top-0 flex w-6 justify-center">
-          {% else %}
-          <div class="absolute left-0 top-0 flex w-6 justify-center -bottom-6">
-            {% endif %}
-            <div class="w-px bg-gray-200 dark:bg-neutral-900"></div>
-          </div>
-          {% if event.important %}
-          <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white dark:bg-neutral-950">
-            <div class="h-1.5 w-1.5 rounded-full bg-green-400 ring-1 ring-green-400"></div>
-          </div>
-          <p class="flex-auto font-medium py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-300">{{ event.title
-            }}</p>
-          {% else %}
-          <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white dark:bg-neutral-950">
-            <div
-              class="h-1.5 w-1.5 rounded-full bg-gray-100 dark:bg-neutral-500 ring-1 ring-gray-300 dark:ring-neutral-500 dark:text-neutral-500">
-            </div>
-          </div>
-          <p class="flex-auto py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-500">{{ event.title }}</p>
-          {% endif %}
-          <time class="flex-none py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-500">{{ event.date }}</time>
+        {% else %}
+        <div class="absolute left-0 top-0 flex w-6 justify-center -bottom-6">
+        {% endif %}
+        </div>
+
+        {% if event.important %}
+        <p class="flex-auto font-medium py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-300">{{ event.title }}</p>
+        {% else %}
+        <p class="flex-auto py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-500">{{ event.title }}</p>
+        {% endif %}
+
+        <time class="flex-none py-0.5 text-xs leading-5 text-gray-600 dark:text-neutral-500">{{ event.date }}</time>
       </li>
       {% endfor %}
     </ul>
