--- a/src/themes/core/templates/partial/footer.html
+++ b/src/themes/core/templates/partial/footer.html
@@ -2,7 +2,7 @@
   <div class="mx-auto max-w-7xl overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
     <div class="mt-10 flex justify-center space-x-10">
       <a href="{{ SITE_DATA.github_link }}" target="_blank"
-        class="text-gray-400 dark:text-neutral-500 hover:text-gray-500 dark:hover:text-neutral-300">
+        class="text-gray-400 dark:text-neutral-500 hover:text-gray-500 dark:hover:text-neutral-300 transition">
         <span class="sr-only">GitHub</span>
         <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
           <path fill-rule="evenodd"
