--- a/src/themes/core/templates/partial/people.html
+++ b/src/themes/core/templates/partial/people.html
@@ -1,7 +1,7 @@
 <ul role="list" class="grid 2xl:grid-cols-[repeat(auto-fit,_25%)] m-auto mt-20 justify-center gap-6">
   {% for person in SITE_DATA.people %}
   <li
-    class="col-span-1 flex flex-col divide-y divide-gray-200 rounded-lg bg-white dark:bg-neutral-900 text-center shadow">
+    class="col-span-1 flex flex-col divide-y divide-gray-200 rounded-lg bg-white dark:bg-neutral-900 text-center shadow dark:hover:bg-neutral-800 hover:bg-neutral-100 transition ease-in-out duration-300">
     <div class="flex flex-1 flex-col p-8">
       <img class="mx-auto h-32 w-32 flex-shrink-0"
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/people/{{ person.avatar }}" alt="">
