--- a/src/themes/core/templates/partial/welcome.html
+++ b/src/themes/core/templates/partial/welcome.html
@@ -1,6 +1,9 @@
 <div class="px-6 py-24 sm:py-32 lg:px-8">
   <div class="mx-auto max-w-2xl text-center">
-    <h2 class="text-4xl font-bold tracking-tight text-gray-900 dark:text-neutral-100 sm:text-6xl">Hello there 👋🏻</h2>
+    <h2 class="text-4xl font-bold tracking-tight text-gray-900 dark:text-neutral-100 sm:text-6xl">
+      <div class="inline-block">Hello there</div>
+      <div class="inline-block animate-[wiggle_2s_ease-in-out_infinite]">👋🏻</div>
+    </h2>
     <p class="mt-6 text-lg leading-8 text-gray-600 dark:text-neutral-500">Welcome to our <strong>Family</strong>
       website.</p>
   </div>
