Add Mastodon to social links

--- a/src/themes/core/templates/partial/people.html
+++ b/src/themes/core/templates/partial/people.html
@@ -12,7 +12,7 @@
       </dl>
       <span class="isolate inline-flex rounded-md shadow-sm mt-8 mx-auto">
         {% for social_media in person.social_media %}
-        <a href="{{ social_media.url }}" target="_blank">
+        <a href="{{ social_media.url }}" target="_blank" rel="me">
           {% if person.social_media | length == 1 %}
           <button type="button"
             class="relative inline-flex items-center rounded-md bg-white dark:bg-neutral-900 px-3 py-2 text-sm font-semibold text-neutral-900 dark:text-neutral-100 ring-1 ring-inset ring-neutral-300 dark:ring-neutral-500 hover:bg-neutral-50 dark:hover:bg-neutral-800 focus:z-10">
